# LogAnalyzer

./: .gitignore  .gitmodules  README.md  backend_manager.sh
.devcontainer/: .env  Dockerfile  compose.yml  devcontainer.json
config_files/release/: CMakeLists.txt  conanfile.txt
documentation/: action_plan.md  architecture.drawio
documentation/log_templates/: log.csv  log.json  log.txt
src/: main.cpp
